# self-meter

./: .gitignore  Cargo.toml  README.rst
examples/: Cargo.toml  README.md  json.rs  simple.rs
src/: debug.rs  error.rs  lib.rs  meter.rs  report.rs  scan.rs  serialize.rs
