[package]
name = "self-meter"
description = """
    A tiny library to measure resource usage of the process it's used in.
"""
license = "MIT/Apache-2.0"
readme = "README.rst"
keywords = ["linux", "monitoring", "meter"]
homepage = "https://github.com/tailhook/self-meter"
documentation = "https://docs.rs/self-meter"
version = "0.7.0"
authors = ["paul@colomiets.name", "yoitscore@gmail.com"]
edition = "2021"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
quick-error = "2.0.0"
libc = "0.2.16"
num_cpus = "1.15.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winbase", "psapi", "sysinfoapi"] }

[dev-dependencies]
serde_json = "1.0"

[lib]
name = "self_meter"
path = "src/lib.rs"

